# dbt-ai-agent

./: .gitignore  README.md
app/: app.py  ingest.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
app/eval/: data-gen.ipynb  evaluations.ipynb
app/eval_logs/: gh_agent_20260404_164411_efb448.json  gh_agent_20260404_164436_eec745.json  gh_agent_20260404_164503_b6dc5c.json  gh_agent_20260404_164532_f4b6bb.json  gh_agent_20260404_164542_b82071.json  gh_agent_20260404_164555_9ef24d.json  gh_agent_20260404_164617_885e2b.json  gh_agent_20260404_164632_f32ce0.json  gh_agent_20260404_164654_9976a3.json  gh_agent_20260404_164723_256a90.json  gh_agent_20260404_164759_06667d.json  gh_agent_20260404_164828_391c7c.json  gh_agent_20260404_164844_c18e2c.json  gh_agent_20260404_164853_b1df13.json  gh_agent_20260404_164922_566c10.json
app/logs/: gh_agent_20260404_105301_218ca4.json  gh_agent_20260404_110354_815cdd.json  gh_agent_20260404_110959_6c29d5.json  gh_agent_20260404_111057_0d3123.json  gh_agent_20260404_111735_0eaafb.json  gh_agent_20260404_111851_51805c.json  gh_agent_20260404_113143_7a0b9e.json  gh_agent_20260405_081343_af3c1e.json  gh_agent_20260405_081728_f14bcc.json  gh_agent_20260405_090423_67b988.json  gh_agent_20260405_091715_fbcfc8.json  gh_agent_20260405_092459_ee5553.json  gh_agent_20260405_112705_661c1c.json
course/: dbt_agent.ipynb  pyproject.toml
course/logs/: dbt_agent_v2_20260404_064329_261321.json  dbt_agent_v2_20260404_074746_5f9c5e.json  dbt_agent_v2_20260404_074753_f040a3.json  dbt_agent_v2_20260404_074802_622dd5.json  (+7 more)
